--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -34,5 +34,5 @@
   });
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
-
+<meta name="google-site-verification" content="tI7xVW634EJNYKzRe-19FKW3XZ3dVHqa1GOUBNgDHfA" />
 <!-- end custom head snippets -->
