--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -83,8 +83,10 @@
   }
 
   img {
+     width: 36px;
+     height: 36px;
     max-width: 250px;
-    border-radius: 50%;
+    // border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
