--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -74,7 +74,7 @@
   vertical-align: top;
   width: 36px;
   // set width only, for non-square avatars
-  height: 36px;
+  // height: 36px;
 
   @include breakpoint($large) {
     display: block;
@@ -83,8 +83,8 @@
   }
 
   img {
-     width: 100px;
-     height: 90px;
+     width: 210px;
+     height: 190px;
     max-width: 250px;
     // border-radius: 50%;
 
