--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -210,7 +210,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: #fff transparent;
+    border-color: #cccccc transparent;
     z-index: 1;
 
     @include breakpoint($large) {
