--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   padding-bottom: 9em;
-  color: #cccccc;
+  color: #000000;
   font-family: $global-font-family;
   line-height: 1.5;
 
