--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   padding-bottom: 9em;
-  color: #000000;
+  color: #000000; /* THIS CHANGE THE COLOR OF THE WORDS IN THE SITE*/
   font-family: $global-font-family;
   line-height: 1.5;
 
@@ -64,7 +64,7 @@ p {
 u,
 ins {
   text-decoration: none;
-  border-bottom: 1px solid $text-color;
+  border-bottom: 1px solid #000000;
   a {
     color: inherit;
   }
