--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -4,7 +4,7 @@
 
 .masthead {
   position: relative;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #000000; /* THIS IS THE COLOR OF THE LINE THAT SEPARATES THE TOP AND THE MAIN TEXT*/
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
