--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -92,7 +92,7 @@
       }
 
       &.current {
-        color: #fff;
+        color: #000000; /* #fff */
         background: $primary-color;
       }
 
