--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -193,7 +193,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: $border-color transparent;
+    border-color: #000000; /* $border-color transparent*/
     z-index: 0;
 
     @include breakpoint($large) {
