--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,7 +57,7 @@ $body-color                 : #fff;
 $background-color           : #e7ffff; /* THIS IS THE MAIN COLOR*/
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : #ff3800; /* $dark-gray*/
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
