--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,7 +54,7 @@ $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #fff; 
-$background-color           : #e7ffff; /* THIS IS THE MAIN COLOR*/
+$background-color           : #fff; /* THIS IS THE MAIN COLOR*/
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : #ff3800; /* $dark-gray*/
