--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -210,7 +210,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: #cccccc transparent;
+    border-color: #ff4032;
     z-index: 1;
 
     @include breakpoint($large) {
@@ -228,7 +228,7 @@
     padding-right: 5px;
     padding-top: 2px;
     padding-bottom: 2px;
-    color: inherit;
+    color: #ff4032;
     font-size: $type-size-5;
     text-decoration: none;
 
