--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -175,7 +175,7 @@
 .greedy-nav {
   position: relative;
   min-width: 250px;
-  background: $background-color;
+  background: #ff4032; /* $background-color */ 
 
   a {
     display: block;
