--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -175,17 +175,17 @@
 .greedy-nav {
   position: relative;
   min-width: 250px;
-  background: #fef9cc; /* $background-color. To change the masthead you have to change here and in masthead (a folder in sass) */ 
+  background: #1c1d22; /* $background-color. To change the masthead you have to change here and in masthead (a folder in sass) */ 
 
   a {
     display: block;
     margin: 0 1rem;
     padding: 0.5rem 0;
-    color: $masthead-link-color;
+    color: #fff;
     text-decoration: none;
 
     &:hover {
-      color: $masthead-link-color-hover;
+      color: $#fff;
     }
   }
 
