--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -263,6 +263,11 @@ body:hover .visually-hidden button {
     color: $twitter-color;
   }
 
+  .fa-twitter,
+  .fa-twitter-square {
+    color: #000;
+  }
+
   .fa-vimeo,
   .fa-vimeo-square {
     color: $vimeo-color;
