--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -13,7 +13,9 @@ layout: default
 {% endif %}
 
 <div id="main" role="main">
-  {% include sidebar.html %}
+  <div class="sidebar"> 
+    {% include sidebar.html %}
+  </div>
 
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
