--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -99,7 +99,7 @@
   display: table-cell;
   vertical-align: top;
   padding-left: 15px;
-  padding-right: 25px;
+  padding-right: 0px;
   line-height: 1;
 
   @include breakpoint($large) {
@@ -162,6 +162,8 @@
   }
 }
 
+border-width: 0 200px 400px 200px;
+
 .author__urls {
   display: none;
   position: absolute;
@@ -194,8 +196,8 @@
     left: calc(50% - 10px);
     width: 0;
     border-style: solid;
-    border-width: 0 10px 10px;
-    border-color: #00000000; /* $border-color transparent*/
+    border-width: 0 10px 10px 10px;
+    border-color: #ff0000; /* $border-color transparent*/
     z-index: 0;
 
     @include breakpoint($large) {
@@ -211,7 +213,7 @@
     left: calc(50% - 10px);
     width: 0;
     border-style: solid;
-    border-width: 0 10px 10px;
+    border-width: 0 10px 10px 10px;
     border-color: #cccccc;
     z-index: 1;
 
