--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -13,7 +13,7 @@ layout: default
 {% endif %}
 
 <div id="main" role="main">
-  <div class="sidebar"> 
+  <div class="archive"> 
     {% include sidebar.html %}
   </div>
 
