--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -195,7 +195,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px 10px;
-    border-color: #ff0000; /* $border-color transparent*/
+    border-color: transparent transparent #FF4532 transparent;
     z-index: 0;
 
     @include breakpoint($large) {
@@ -212,7 +212,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px 10px;
-    border-color: #cccccc;
+    border-color: transparent transparent #cccccc transparent;
     z-index: 1;
 
     @include breakpoint($large) {
