--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -15,10 +15,10 @@
   </div>
 
   <div class="author__content">
-  <div>
+  <div  class="row">
     <h3 class="author__name">{{ author.name }}</h3>
-    {% if author.bio %}<p class="author__bio">{{ author.bio }}</p>{% endif %}
-  </div>
+    {% if author.bio %}<p class="author__bio col">{{ author.bio }}</p>{% endif %}
+  </div  class="row">
     <div class="author__urls-wrapper">
       <button class="btn btn--inverse">Follow</button>
       <ul class="author__urls social-icons">
