--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -196,7 +196,7 @@
     padding: 0 0.5rem;
     border: 0;
     outline: none;
-    background-color: $primary-color;
+    background-color: $dark-gray-2;
     color: #fff;
     cursor: pointer;
   }
