--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -16,11 +16,11 @@
   </div>
 
   <div class="author__content">
-    <div class="row">
+    <div >
       <h3 class="author__name">{{ author.name }}</h3>
       {% if author.bio %}<p class="author__bio col">{{ author.bio }}</p>{% endif %}
     </div>
-    <div class="author__urls-wrapper row">
+    <div class="author__urls-wrapper">
       <button class="btn btn--inverse">Follow</button>
       <ul class="author__urls social-icons">
         {% if author.location %}
