--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,9 +12,9 @@ layout: default
   {% endunless %}
 {% endif %}
 
-<div id="main" role="main">
-  <div class="row">
-    <div class="col"> 
+<div id="main" role="main" class="container">
+  <div >
+    <div > 
       {% include sidebar.html %}
     </div>
     <div class="archive col">
