--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -84,7 +84,8 @@
 
   img {
      width: 260px;
-     height: 460px;
+     height: 100%;
+     min-width: 200px;
     
     @include breakpoint($large) {
       padding: 5px;
