--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -46,7 +46,7 @@
             ResearchGate</a></li>
         {% endif %}
         {% if author.twitter %}
-        <li><a href="https://twitter.com/{{ author.twitter }}"><img src="/images/x-twitter.svg" alt="x-twitter" /></img> Twitter</a></li>
+        <li><a href="https://twitter.com/{{ author.twitter }}"><img src="/images/x-twitter.svg" alt="x-twitter" style="width: 14px; margin-left: 2px;"></img> Twitter</a></li>
         {% endif %}
         {% if author.facebook %}
         <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fab fa-fw fa-facebook-square"
