--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -55,7 +55,8 @@
   @include breakpoint($large) {
     position: relative;
     float: right;
-    width: $right-sidebar-width-narrow;
+    width: 200px;
+//    width: $right-sidebar-width-narrow;
     margin-left: span(0.5 of 12);
     z-index: 10;
   }
