--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -21,8 +21,8 @@
       {% if author.bio %}<p class="author__bio col">{{ author.bio }}</p>{% endif %}
     </div>
     
-    <div class="author__urls-wrapper" style="top: 12px; display: flex; justify-content: start; flex-direction: column; flex-wrap: nowrap;">
-      <button class="btn btn--inverse">Follow</button>
+    <div class="author__urls-wrapper" style="display: flex; justify-content: start; flex-direction: column; flex-wrap: nowrap;">
+      <button class="btn btn--inverse" style="top: 12px;" >Follow</button>
       <ul class="author__urls social-icons">
         {% if author.location %}
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}</li>
