--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -17,6 +17,10 @@
 }
 
 .page {
+  @include breakpoint($medium) {
+    @include span(9 of 12 last);
+  }
+
   @include breakpoint($large) {
     @include span(10 of 12 last);
     @include prefix(0.5 of 12);
