--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -15,6 +15,10 @@
 
   @include breakpoint($medium) {
     @include span(3 of 12);
+  }
+  
+  @include breakpoint($large) {
+    @include span(2 of 12);
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
