--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -17,7 +17,7 @@ layout: default
     <div > 
       {% include sidebar.html %}
     </div>
-    <div class="archive col">
+    <div class="archive">
       {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 class="page__title">{{ page.title }}</h1>
       {% endunless %}
