--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -3,11 +3,11 @@
    ========================================================================== */
 
 .archive {
+  margin-left: 12px;
   margin-bottom: 2em;
 
   @include breakpoint($medium) {
-    @include prefix(1 of 12);
-    @include span(8 of 12);
+    @include span(8.2 of 12);
   }
 
   @include breakpoint($large) {
