--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -18,7 +18,7 @@
   <div class="author__content">
     <div >
       <h3 class="author__name">{{ author.name }}</h3>
-      {% if author.bio %}<p class="author__bio col">{{ author.bio }}</p>{% endif %}
+      {% if author.bio %}<p class="author__bio">{{ author.bio }}</p>{% endif %}
     </div>
     
     <div class="author__urls-wrapper" style="display: flex; justify-content: start; flex-direction: column; flex-wrap: nowrap;">
