--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -89,12 +89,18 @@
 
   img {
      width: 260px;
-     height: 100%;
+     height: auto;
      min-width: 200px;
     
     @include breakpoint($large) {
       padding: 5px;
       border: 1px solid $border-color;
+    }
+    
+    @supports(object-fit: cover){
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
     }
   }
 }
