--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -83,8 +83,8 @@
 
   @include breakpoint($large) {
     display: block;
-    width: auto;
-    height: auto;
+    max-width: 260px;
+    max-height: 390px;
   }
 
   img {
