--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -98,7 +98,7 @@
     }
     
     @supports(object-fit: cover){
-      height: 100%;
+      max-height: 390px;
       object-fit: cover;
       object-position: center center;
     }
