--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -98,7 +98,7 @@
     }
     
     @supports(object-fit: cover){
-      max-height: 390px;
+      height: 300px;
       object-fit: cover;
       object-position: center center;
     }
