--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -77,32 +77,32 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  max-width: 260px;
-  max-height: 390px;
+  width: 36px;
   // set width only, for non-square avatars
   // height: 36px;
 
   @include breakpoint($large) {
     display: block;
+    max-width: 260px;
+    max-height: 390px;
   }
+}
 
-  img {
-     width: 260px;
-     height: auto;
-     min-width: 200px;
-     
-     @supports(object-fit: cover){
-       height: 100%;
-       object-fit: cover;
-       object-position: center center;
-      }
-
-      @include breakpoint($large) {
-        padding: 5px;
-        border: 1px solid
-        
-      }
-  }
+.author__img {
+  max-width: 260px;
+  height: auto;
+  min-width: 200px;
+ 
+ @include breakpoint($large) {
+   padding: 5px;
+   border: 1px solid $border-color;
+ }
+ 
+ @supports(object-fit: cover){
+   height: 100%;
+   object-fit: cover;
+   object-position: center center;
+ }
 }
 
 .author__content {
