--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -77,14 +77,15 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
+  height: 36px;
   width: 36px;
   // set width only, for non-square avatars
   // height: 36px;
 
   @include breakpoint($large) {
     display: block;
-    max-width: 50px;
-    max-height: auto;
+    max-width: 260px;
+    max-height: 390px;
   }
 
   img {
