--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -77,7 +77,6 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  height: 36px;
   width: 36px;
   // set width only, for non-square avatars
   // height: 36px;
@@ -89,7 +88,7 @@
   }
 
   img {
-     width: 260px;
+     max-width: 260px;
      height: auto;
      min-width: 200px;
     
