--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -90,7 +90,7 @@
   img {
      max-width: 260px;
      height: auto;
-     min-width: 200px;
+     min-width: 150px;
     
     @include breakpoint($large) {
       padding: 5px;
@@ -98,7 +98,7 @@
     }
     
     @supports(object-fit: cover){
-      height: 100%;
+      max-height: 390px;
       object-fit: cover;
       object-position: center center;
     }
