--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -89,7 +89,7 @@
 
   img {
      max-width: 260px;
-     height: auto;
+     max-height: 390px;
      min-width: 150px;
     
     @include breakpoint($large) {
@@ -98,7 +98,7 @@
     }
     
     @supports(object-fit: cover){
-      max-height: 390px;
+      height: 100%;
       object-fit: cover;
       object-position: center center;
     }
