--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -88,8 +88,8 @@
   }
 
   img {   
-    max-height: 30px;
-    min-width: 200px;
+    max-height: 200px;
+    min-width: 180px;
  
     @supports(object-fit: cover){
        height: 100%;
@@ -98,10 +98,12 @@
      }
 
     @include breakpoint($medium) {
+      max-width: 300px;
        height: auto;
     }
       
     @include breakpoint($large) {
+      max-width: 360px;
       padding: 5px;
       border: 1px solid $border-color;
     }
