--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -78,14 +78,19 @@
   display: table-cell;
   vertical-align: top;
   width: 300px;
-  height: 200px;
+  height: 320px;
   // set width only, for non-square avatars
   // height: 36px;
 
   @include breakpoint($large) {
     display: block;
-    height: 390px;
-    width: 260px;
+    max-height: 360px;
+    max-width: 230px;
+  }
+
+  @include breakpoint($x-large) {
+    max-height: 390px;
+    max-width: 260px;
   }
 
   img {   
