--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -84,13 +84,13 @@
 
   @include breakpoint($large) {
     display: block;
-    max-height: 360px;
+    height: 360px;
     max-width: 230px;
   }
 
   @include breakpoint($x-large) {
-    max-height: 390px;
-    max-width: 260px;
+    height: 390px;
+    max-width: 300px;
   }
 
   img {   
@@ -102,18 +102,6 @@
        object-fit: cover !important ;
        object-position: center center !important;
      }
-/*
-    @include breakpoint($medium) {
-      max-width: 300px !important;
-       height: auto !important;
-    }
-
-    @include breakpoint($large) {
-      max-width: 360px !important;
-      padding: 5px !important;
-      border: 1px solid $border-color !important;
-    }
-    */
   }
 }
 
